ipfs is adding filepath instead of contents"

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "buffer": "^5.2.1",
     "dotenv": "^8.0.0",
     "fs": "^0.0.1-security",
+    "interface-ipfs-core": "^0.109.0",
     "ipfs": "^0.34.0",
     "nodemon": "^1.19.0",
     "web3": "^1.0.0-beta.34"
